--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
+body {
+  background-color: grey;
+}
+
 section {
   width: 80%;
   margin: 0 auto;
   padding: 0;
+  background-color: white;
 }
 
 header {
