--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,8 @@ p {
   display: inline-block;
   vertical-align: top;
   margin: 0 auto;
-  margin-left: 15%;
+  margin-left: 5%;
+  margin-top: 3%;
   padding: 0;
 }
 
@@ -43,15 +44,13 @@ p {
   margin-left: 7%;
 }
 
-.delete {
-  margin-left: 1%;
+#check {
+  margin-left: 2%;
+  margin-top: 1.5%;
 }
 
-.delete-post {
-  position: absolute;
-  margin-left: 38%;
-  margin-top: -3%;
-}
+
+
 
 .toDoContainer {
   list-style-type: none;
@@ -59,11 +58,12 @@ p {
   margin-left: 9.7%;
 }
 
-.toDoContainer p {
+.toDoContainer div {
   width: 157.5%;
   height: 45px;
   background-color: white;
   margin-top: 1%;
+  margin-left: 15%;
 }
 
 footer {
